<resources>
    <string name="app_name">鸡跑跑商家版</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="regeist">注册</string>
    <string name="reset_pwd">重置密码</string>
    <string name="search_phone">搜索机型</string>
    <string name="auth_code">验证码</string>
    <string name="re_pwd">确认密码</string>
    <string name="hint_phone_length">11位手机号</string>
    <string name="next">下一步</string>
    <string name="pwd_space">密码  </string>
    <string name="shop_name">店铺名称</string>
    <string name="invate_code">邀请码</string>
    <string name="select_area">选择地区</string>
    <string name="address">详细地址</string>
    <string name="submit">确认提交</string>
    <string name="next_level">下级查看</string>
    <string name="select_phone">选择机型</string>
    <string name="seller_order">采购订单</string>
    <string name="user_order">平台订单</string>
    <string name="select_phone_hint">请输入需要维修的品牌</string>
    <string name="select_component">选择部件</string>
    <string name="toast_network_error">网络异常</string>
    <string name="order_detail">订单详情</string>
    <string name="shop_info">商铺信息</string>
    <string name="credibility_querry">平台公信查询</string>
    <string name="sure_order">确认订单</string>
    <string name="msg_center">消息中心</string>
    <string name="add_address">添加新地址</string>
    <string name="cart">购物车</string>
    <string name="card_owner">持卡人</string>
    <string name="bank_name">银行名称</string>
    <string name="user_name">姓名</string>
    <string name="card_num">银行卡号</string>
    <string name="id_card_num">身份证号</string>
    <string name="card_phone">预留手机号</string>
    <string name="card_open">开户行名称</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="add_id_card">绑定身份证</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="add_bank_card_tip">请绑定持卡本人的银行卡</string>
    <string name="submit_order_success">订单已提交</string>
    <string name="submit_order_exception">提交异常</string>
    <string name="vip">VIP专线：023-49846815</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="sure">确定</string>
    <string name="set_pwd">设置支付密码</string>
    <string name="u_not_upgrade_tip">已经是最新版本</string>
    <string name="upgrade_tip">发现新版本,是否更新 ?</string>
    <string name="no_network_to_remind">网络异常，请联网或者稍后重试</string>
    <string name="upgrade_loading">正在更新中...</string>
    <string name="file_determine">确定</string>
    <string name="cancel">取消</string>
</resources>
