<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/splash"
        android:scaleType="centerCrop"
        android:layout_height="200dp"/>

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/rec_with_raduis_white"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:textSize="@dimen/sp_16" />

    <EditText
        android:layout_marginTop="@dimen/dp_10" android:id="@+id/et_pwd"
        android:paddingTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/rec_with_raduis_white"
        android:hint="@string/pwd"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:text="@string/login"
        android:textSize="@dimen/sp_16"
        android:background="@drawable/rec_with_raduis10"
        android:textColor="@color/color_white"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:paddingRight="@dimen/dp_40"
        android:paddingLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="@dimen/dp_5"
            android:id="@+id/regeist"
            android:text="@string/regeist"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_fc81d"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/reset"
            android:clickable="true"
            android:padding="@dimen/dp_5"
            android:text="@string/forget_pwd"
            android:textColor="@color/color_99"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>



</LinearLayout>

