<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <include layout="@layout/common_title"/>
    <View
        android:background="@color/color_33"
        android:layout_width="match_parent"
        android:layout_height=".5dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:text="输入已绑定的手机号"-->
                <!--android:textColor="@color/color_66"-->
                <!--android:padding="@dimen/dp_5"-->
                <!--android:layout_height="wrap_content" />-->
            <!--<View-->
                <!--android:background="@color/color_33"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height=".5dp"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:inputType="number"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:background="@null"
                    android:hint="@string/hint_phone_length"
                    android:paddingLeft="@dimen/dp_20"
                    android:textColor="@color/color_33" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/color_33" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5">

                <TextView
                    android:layout_width="61dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="@string/auth_code" />

                <EditText
                    android:id="@+id/et_auth_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:inputType="number"
                    android:background="@null"
                    android:hint="验证码"
                    android:paddingLeft="@dimen/dp_20"
                    android:textColor="@color/color_33" />

                <TextView
                    android:id="@+id/auth_code_get"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:text="获取验证码"
                    android:textColor="#d4c62115"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/color_33" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5">

                <TextView
                    android:layout_width="49dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="@string/pwd_space" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="14"
                    android:background="@null"
                    android:hint="设置新密码"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_20"
                    android:textColor="@color/color_33" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/color_33" />






        </LinearLayout>


        <TextView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rec_with_raduis10"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>

</LinearLayout>

