<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_title"/>
    <View
        android:background="@color/color_33"
        android:layout_width="match_parent"
        android:layout_height=".5dp"/>
    <RelativeLayout
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:text="@string/shop_name"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/shop_et"
                    android:layout_weight="14"
                    android:hint="商铺名称"
                    android:layout_width="0dp"
                    android:background="@null"
                    android:paddingLeft="@dimen/dp_20"
                    android:textColor="@color/color_33"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <View
                android:background="@color/color_33"
                android:layout_width="match_parent"
                android:layout_height=".5dp"/>






            <LinearLayout
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/select_area" />

                <EditText
                    android:id="@+id/area_et"
                    android:layout_weight="14"
                    android:hint="地区信息"
                    android:focusable="false"
                    android:layout_width="0dp"
                    android:background="@null"
                    android:paddingLeft="@dimen/dp_20"
                    android:textColor="@color/color_33"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <View
                android:background="@color/color_33"
                android:layout_width="match_parent"
                android:layout_height=".5dp"/>

            <LinearLayout
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/address_et"
                    android:layout_weight="7"
                    android:hint="街道门牌信息"
                    android:layout_width="0dp"
                    android:background="@null"
                    android:paddingLeft="@dimen/dp_20"
                    android:textColor="@color/color_33"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <View
                android:background="@color/color_33"
                android:layout_width="match_parent"
                android:layout_height=".5dp"/>

            <LinearLayout
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/idcard_et"
                    android:layout_weight="7"
                    android:hint="身份证号码"

                    android:layout_width="0dp"
                    android:background="@null"
                    android:paddingLeft="@dimen/dp_20"
                    android:textColor="@color/color_33"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <View
                android:background="@color/color_33"
                android:layout_width="match_parent"
                android:layout_height=".5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5">

                <TextView
                    android:layout_width="17dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="@string/invate_code" />
                <EditText
                    android:id="@+id/invite_et"
                    android:layout_weight="7"
                    android:hint="邀请码"
                    android:layout_width="0dp"
                    android:background="@null"
                    android:inputType="number"
                    android:paddingLeft="@dimen/dp_20"
                    android:textColor="@color/color_33"
                    android:layout_height="match_parent" />



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/color_33" />
        </LinearLayout>







        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:text="@string/submit"
            android:background="@drawable/rec_with_raduis"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_height="@dimen/dp_50" />

    </RelativeLayout>

</LinearLayout>
